# IoT-Driven-Drowsiness-Detection-System

./: README.md  download_model.py  drowsiness_log_1733729976.txt  install_dependencies.sh  main.py  pyproject.toml  requirements.txt  setup.py
modules/: alert_system.py  camera_manager.py  config.py  data_logger.py  drowsiness_detector.py  eye_detector.py
modules/utils/: config.py  constants.py  face_utils.py  model_downloader.py  visualization.py
