[tool.poetry]
name = "drowsiness-detection"
version = "0.1.0"
description = "OpenCV-based drowsiness detection system"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.8.1"
numpy = "^1.26.2"
dlib = "^19.24.2"
imutils = "^0.5.4"
scipy = "^1.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"